--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "description": "Личный проект «Пинк» от HTML Academy",
+  "author": "Ivan Muliarchyk",
   "devDependencies": {
     "autoprefixer": "6.7.x",
     "browser-sync": "2.18.12",
