--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
   },
   "scripts": {
     "test": "editorconfig-cli",
-    "build": "npm run build && gulp build",
-    "start": "gulp serve"
+    "build": "gulp build",
+    "start": "npm run build & gulp serve"
   },
   "editorconfig-cli": [
     "*.html",
